fix: remove column gap by main-content

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
 
 .main-content {
   display: flex;
-  column-gap: 30px;
 }
 
 /* Left column starts*/
